app-code/qbittorrent/qbittorrent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      nodeSelector:
        kubernetes.io/hostname: atlantis

      securityContext:
        seccompProfile:
          type: Unconfined
        appArmorProfile:
          type: Unconfined
        
      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 1.1.1.1
        options:
          - name: ndots
            value: "1"
            
      containers:
        # THE SIDECAR: VPN Proxy Engine
        - name: gluetun
          image: qmcgaw/gluetun:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 8888
              name: http-proxy

        # THE DOWNLOADER
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: true
          ports:
            - containerPort: 8080
              name: webui
            - containerPort: 6881
              name: torrent-tcp
              protocol: TCP
            - containerPort: 6881
              name: torrent-udp
              protocol: UDP
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: base-volume
              mountPath: /data/data/torrents
            - name: movies-volume
              mountPath: /data/data/torrents/movies
            - name: tvshows-volume
              mountPath: /data/data/torrents/tvshows
            - name: music-volume
              mountPath: /data/data/torrents/music
            - name: adult-volume
              mountPath: /data/data/torrents/adult
              
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: base-volume
          persistentVolumeClaim:
            claimName: qbit-base-pvc
        - name: movies-volume
          persistentVolumeClaim:
            claimName: qbit-movies-pvc
        - name: tvshows-volume
          persistentVolumeClaim:
            claimName: qbit-tvshows-pvc
        - name: music-volume
          persistentVolumeClaim:
            claimName: qbit-music-pvc
        - name: adult-volume
          persistentVolumeClaim:
            claimName: qbit-adult-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-svc
  namespace: media
spec:
  selector:
    app: qbittorrent
  type: NodePort
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
      nodePort: 30068
    - name: torrent-tcp
      port: 6881
      targetPort: 6881
      nodePort: 31681
      protocol: TCP
    - name: torrent-udp
      port: 6881
      targetPort: 6881
      nodePort: 31681
      protocol: UDP
    - name: http-proxy
      port: 8888
      targetPort: 8888
