app-code/qbittorrent/qbittorrent-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-ingress
  namespace: media
spec:
  entryPoints: [web, websecure]
  routes:
    - match: Host(`qbit.nexus.link`)
      kind: Rule
      middlewares: [{name: authentik-forwardauth, namespace: media}]
      services: [{name: qbittorrent-svc, port: 8080}]
